--- a/css/styles.css
+++ b/css/styles.css
@@ -2,30 +2,77 @@ body {
   margin: 0;
   font-family: 'Merriweather', serif;
   text-align: center;
+  background-color: white;
+  color: #40514E;
 
 }
 h1 {
   margin: 0 auto 0 auto;
-  font-size: 60px;
+  font-size: 375%;
   font-family: 'Sacramento', cursive;
+  color:#66BFBF ;
+  line-height: 2;
 
 }
 h2 {
   font-family: 'Montserrat', sans-serif;
-  margin: 0 auto 0 auto;
-  width: 10%
+  margin: 20px auto 0 auto;
+  width: 10%;
+  color:#66BFBF ;
+  font-weight: normal;
+  padding-bottom: 10px;
+}
+hr {
+border: dotted #EAF6F6 6px;
+border-bottom: none;
+width: 4%;
+margin: 100px auto 100px auto;
+}
+p {
+line-height: 3;
 }
 h3 {
 font-family: 'Montserrat', sans-serif;
+color: #11999E;
 }
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
 
+}
+a:hover {
+  color: #EAF6F6;
+}
 img {
   margin: 0;
+
 }
 
 
 div {
-  background-color: #C2DED1;
+  background-color: white;
+}
+.copyright {
+color: #EAF6F6;
+font-size: 0.75rem;
+padding: 20px;
+}
+.skill-row {
+  width:50%;
+margin: 100px auto 100px auto;
+text-align: left;
+
+}
+.ya {
+  max-width: 350px;
+  max-height: 350px;
+}
+.contact-message {
+  color: #40514E;
+  width: 20%;
+  margin: 40px auto 40px;
 }
 .mountain {
 position: relative;
@@ -37,10 +84,24 @@ position: relative;
   top:300px;
 
 }
+.chil {
+  width:20%;
+
+  padding-bottom: 30px;
+  margin-right: 30px;
+
+}
+
+.comp{
+  width:20%;
+  float: right;
+margin-left: 30px;
+}
+
 .top-cloud {
   position: absolute;
   right:650px;
-  top:100px;
+  top:100px ;
 }
 .top-container {
 position: relative;
@@ -50,14 +111,42 @@ padding-top: 200px;
 
 }
 .middle-container {
-
-
-
-
-}
-.bottom-container {
-
+  margin: 100px 0;
 }
 .web {
   text-decoration: underline;
+}
+.intro {
+  width: 30%;
+  margin: auto;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #2980b9);
+  background-image: -moz-linear-gradient(top, #11cdd4, #2980b9);
+  background-image: -ms-linear-gradient(top, #11cdd4, #2980b9);
+  background-image: -o-linear-gradient(top, #11cdd4, #2980b9);
+  background-image: linear-gradient(to bottom, #11cdd4, #2980b9);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #2bc4ad);
+  background-image: -o-linear-gradient(top, #3cb0fd, #2bc4ad);
+  background-image: linear-gradient(to bottom, #3cb0fd, #2bc4ad);
+  text-decoration: none;
+}
+.bottom-container {
+  padding: 50px 0 20px 0;
+  background-color: #66BFBF;
 }
